src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>CRM Request</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Awaiting Response</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Review</fullName>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Review in future</fullName>
        </values>
        <values>
            <fullName>Story in Jira</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Reference Request</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Process</fullName>
        </values>
        <values>
            <fullName>In Review</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Acceptance_Criteria__c</fullName>
        <label>Acceptance Criteria</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Area__c</fullName>
        <label>Case Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Access</fullName>
                </value>
                <value>
                    <fullName>Automation</fullName>
                </value>
                <value>
                    <fullName>Data</fullName>
                </value>
                <value>
                    <fullName>Error Message</fullName>
                </value>
                <value>
                    <fullName>Notification</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Page Layout/Fields</fullName>
                </value>
                <value>
                    <fullName>Process</fullName>
                </value>
                <value>
                    <fullName>Question</fullName>
                </value>
                <value>
                    <fullName>Reporting/Dashboard</fullName>
                </value>
                <value>
                    <fullName>Functionality Issues</fullName>
                    <isActive>false</isActive>
                    <label>Functionality Issues</label>
                </value>
                <value>
                    <fullName>Reporting</fullName>
                    <isActive>false</isActive>
                    <label>Reporting</label>
                </value>
                <value>
                    <fullName>Update Request</fullName>
                    <isActive>false</isActive>
                    <label>Update Request</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Details__c</fullName>
        <label>Case Details</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Gainsight</fullName>
                </value>
                <value>
                    <fullName>Integration</fullName>
                </value>
                <value>
                    <fullName>NetSuite</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Spring CM</fullName>
                </value>
                <value>
                    <fullName>ZaapIT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Team__c</fullName>
        <label>Case Team</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>B2B Marketing</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Business Development</fullName>
                </value>
                <value>
                    <fullName>Client Implementation</fullName>
                </value>
                <value>
                    <fullName>Client Success</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                    <label>Commercial Marketing</label>
                </value>
                <value>
                    <fullName>Data Science</fullName>
                </value>
                <value>
                    <fullName>DOPS</fullName>
                </value>
                <value>
                    <fullName>Eligibility</fullName>
                </value>
                <value>
                    <fullName>Enrollment Marketing</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Member Support/Ops</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Products</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                    <label>Sales - Commercial</label>
                </value>
                <value>
                    <fullName>Sales - HSS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City_State__c</fullName>
        <label>City &amp; State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Type__c</fullName>
        <label>Client Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Large Market Employer</fullName>
                </value>
                <value>
                    <fullName>Pharmacy Benefit Managers &amp; Consultants</fullName>
                </value>
                <value>
                    <fullName>Health Systems</fullName>
                </value>
                <value>
                    <fullName>Health Plans</fullName>
                </value>
                <value>
                    <fullName>Self-Insured Employers</fullName>
                </value>
                <value>
                    <fullName>Government &amp; Labor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Completion_Date__c</fullName>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_Email_1__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Email_2__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Name_1__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name_2__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone_1__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_Phone_2__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_Role_Title_1__c</fullName>
        <label>Role/Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Role_Title_2__c</fullName>
        <label>Role/Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentUser_CreatedBy__c</fullName>
        <formula>IF( CreatedBy.Id  = $User.Id , 1 , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CurrentUser_CreatedBy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employee_Count__c</fullName>
        <label>Employee Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>I_would_like_to__c</fullName>
        <label>I would like to</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Industry_Type__c</fullName>
        <label>Industry Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_the_request_for_an_RFP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is the request for an RFP?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Jira_Link__c</fullName>
        <description>link to the Jira ticket representing this case in the sprint</description>
        <label>Jira Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Livongo_Programs__c</fullName>
        <label>Interested Livongo Programs</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Livongo for Diabetes</fullName>
                </value>
                <value>
                    <fullName>Livongo for Hypertension</fullName>
                </value>
                <value>
                    <fullName>Livongo for Weight Management</fullName>
                </value>
                <value>
                    <fullName>Livongo for Diabetes Prevention</fullName>
                </value>
                <value>
                    <fullName>Livongo for Behavioral Health</fullName>
                </value>
                <value>
                    <fullName>DM Solution</fullName>
                </value>
                <value>
                    <fullName>CV Solution</fullName>
                </value>
                <value>
                    <fullName>DP Solution</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Teams_Impacted__c</fullName>
        <label>Other Teams Impacted</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Client Implementation</fullName>
                </value>
                <value>
                    <fullName>Client Success</fullName>
                </value>
                <value>
                    <fullName>Commercial Marketing</fullName>
                </value>
                <value>
                    <fullName>Data Science</fullName>
                </value>
                <value>
                    <fullName>DOPS</fullName>
                </value>
                <value>
                    <fullName>Eligibility</fullName>
                </value>
                <value>
                    <fullName>Enrollment Marketing</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Member Support/Ops</fullName>
                </value>
                <value>
                    <fullName>Sales - Commercial</fullName>
                </value>
                <value>
                    <fullName>Sales - HSS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owned_programs_outside_Livongo__c</fullName>
        <label>Owned programs outside Livongo</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ready_to_nurture__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ready to nurture and move to Jira</description>
        <label>Ready to nurture?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reference_Needed_by__c</fullName>
        <label>Reference needed by?</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requestor__c</fullName>
        <formula>CreatedBy.FirstName + &quot; &quot; + CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requestor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>So_That__c</fullName>
        <label>So That:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <label>Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>New Data Upload or Backfill</fullName>
                </value>
                <value>
                    <fullName>New Dropdown Value</fullName>
                </value>
                <value>
                    <fullName>New Field(s)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_Completion_Date__c</fullName>
        <label>Target Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Technical_Requirements__c</fullName>
        <label>Technical Requirements</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>Case_Team__c</columns>
        <columns>Case_Area__c</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Story in Jira,Closed</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>All_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Cases</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Reference_Requests</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Account__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Reference_Request</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>All Open Reference Requests</label>
    </listViews>
    <listViews>
        <fullName>All_Reference_Requests</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Account__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Reference_Request</value>
        </filters>
        <label>All Reference Requests</label>
    </listViews>
    <listViews>
        <fullName>CRM_Requests_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Case_Team__c</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>CRM Requests</label>
        <queue>CRM_Requests</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Cases_for_review</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Story in Jira,Closed</value>
        </filters>
        <filters>
            <field>CASES.LAST_UPDATE_DATE_ONLY</field>
            <operation>lessOrEqual</operation>
            <value>10/31/2020 12:00 AM</value>
        </filters>
        <filters>
            <field>CASES.LAST_UPDATE_DATE_ONLY</field>
            <operation>greaterOrEqual</operation>
            <value>8/1/2020 12:00 AM</value>
        </filters>
        <label>Cases_for_review</label>
    </listViews>
    <listViews>
        <fullName>Client_Implementation</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Case_Team__c</field>
            <operation>equals</operation>
            <value>Client Implementation</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Open,In Review,Awaiting Response,On Hold,Escalated,Story Groomed</value>
        </filters>
        <label>Client Implementation</label>
    </listViews>
    <listViews>
        <fullName>Client_Implementation_Requested_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Case_Team__c</field>
            <operation>equals</operation>
            <value>Client Implementation</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>Client Implementation Requested Cases</label>
    </listViews>
    <listViews>
        <fullName>Client_Success</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Case_Team__c</field>
            <operation>equals</operation>
            <value>Client Success</value>
        </filters>
        <label>Client Success</label>
    </listViews>
    <listViews>
        <fullName>Closed_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Case_Team__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>Closed Cases</label>
    </listViews>
    <listViews>
        <fullName>Commerical_Strategic_Sales</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Case_Team__c</field>
            <operation>equals</operation>
            <value>Sales,Sales - HSS</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Open,In Review,Awaiting Response,On Hold,Escalated,Story Groomed</value>
        </filters>
        <label>Commerical/Strategic Sales</label>
    </listViews>
    <listViews>
        <fullName>Eligibility</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Case_Team__c</field>
            <operation>equals</operation>
            <value>Eligibility</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Open,In Review,Awaiting Response,On Hold,Escalated,Story Groomed</value>
        </filters>
        <label>Eligibility</label>
    </listViews>
    <listViews>
        <fullName>Enrollment_Marketing</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Case_Team__c</field>
            <operation>equals</operation>
            <value>Enrollment Marketing</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Open,In Review,Awaiting Response,On Hold,Escalated,Story Groomed</value>
        </filters>
        <label>Enrollment Marketing</label>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <recordTypes>
        <fullName>CRM_Request</fullName>
        <active>true</active>
        <businessProcess>CRM Request</businessProcess>
        <label>CRM Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Reference_Request</fullName>
        <active>true</active>
        <businessProcess>Reference Request</businessProcess>
        <label>Reference Request</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Jira_Link_Cannot_Be_Blank</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Status, &quot;Story in Jira&quot;)
&amp;&amp;  ISBLANK(Jira_Link__c)</errorConditionFormula>
        <errorDisplayField>Jira_Link__c</errorDisplayField>
        <errorMessage>Please fill in the Jira Link URL before moving the Status to Story in Jira.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Salesforce_team_only_change_status</fullName>
        <active>true</active>
        <errorConditionFormula>AND($UserRole.Name &lt;&gt; &quot;System Administrator&quot;,
	 $UserRole.Name &lt;&gt; &quot;Sales Admin&quot;,
					ISCHANGED( Status ))</errorConditionFormula>
        <errorMessage>Please contact a Salesforce team member to change the status of this case</errorMessage>
    </validationRules>
</CustomObject>